# libudjatnetwork

./: .gitignore  CHANGELOG  Makefile.in  README.md  configure.ac  link.sh  meson.build  network.cbp  run.sh  test.xml
.github/workflows/: codeql.yml
debian/: changelog  control  libudjatnetwork.dsc  rules
legacy/: Makefile.in  configure.ac  dynamic.pc.in  static.pc.in
locale/: pt_BR.po  udjat-module-network.pot
po/: POTFILES.in  pt_BR.po
rpm/: _service  _servicedata  libudjatnetwork.spec  udjat-module-network.spec
sdk/linux/: dynamic.pc.in  static.pc.in
sdk/windows/: static.pc.in
src/include/: config.h.in  controller.h
src/include/os/linux/udjat/net/: dns.h  icmp.h
src/include/os/windows/udjat/net/: icmp.h
src/include/private/: module.h
src/include/private/agents/: host.h  nic.h
src/include/private/icmp/: controller.h
src/include/private/linux/: icmp_controller.h  netlink.h
src/include/private/windows/: icmp_controller.h
src/include/udjat/linux/: dns.h
src/include/udjat/module/: network.h
src/include/udjat/net/: dns.h  gateway.h  icmp.h
src/include/udjat/net/dns/: agent.h  response.h  state.h
src/include/udjat/net/ip/: agent.h  state.h  subnet.h
src/include/udjat/net/linux/: dns.h  icmp.h
src/include/udjat/net/nic/: agent.h  state.h
src/include/udjat/net/windows/: dns.h  icmp.h
src/include/udjat/network/: agent.h  hostcheck.h  ipaddress.h  ipagent.h  resolver.h
src/include/udjat/network/agents/: host.h  nic.h
src/include/udjat/tools/: inet.h
src/include/udjat/tools/net/: gateway.h  icmp.h
src/module/: agent.cc  factory.cc  hostcheck.cc  inet.cc  init.cc  private.h  range.cc  state.cc
src/module/agents/host/: agent.cc  factory.cc  state.cc
src/module/agents/nic/: agent.cc  factory.cc  interface.cc  interfaces.cc  state.cc
src/module/dns/: record.cc  resolver.cc
src/module/icmp/: controller.cc  host.cc  hostcheck.cc  private.h  state.cc
src/testprogram/: testprogram.cc
src/tools/: defaultgateway.cc  inet.cc
